Complete section on data processing and equations

--- a/PR1/PR1.bib
+++ b/PR1/PR1.bib
@@ -71,7 +71,7 @@
   year={2018}
 }
 
-@article{kalman-introduction,
+@article{Welch1995,
   title={An introduction to the Kalman filter},
   author={Welch, Greg and Bishop, Gary and others},
   year={1995},
@@ -132,4 +132,12 @@
   organization = {nasa.github.io},
   journal = {Github repository},
   author = {NASA}
+}
+
+
+@Misc{Bayesian2014,
+    author = {Fernando Nogueira},
+    title = {{Bayesian Optimization}: Open source constrained global optimization tool for {Python}},
+    year = {2014--},
+    url = " https://github.com/bayesian-optimization/BayesianOptimization"
 }
