Add research questions, minor formatting changes

--- a/PR1/PR1.bib
+++ b/PR1/PR1.bib
@@ -71,7 +71,6 @@
   year={2018}
 }
 
-
 @article{Welch1995,
   title={An introduction to the Kalman filter},
   author={Welch, Greg and Bishop, Gary and others},
@@ -139,5 +138,5 @@
     author = {Fernando Nogueira},
     title = {{Bayesian Optimization}: Open source constrained global optimization tool for {Python}},
     year = {2014--},
-    url = " https://github.com/bayesian-optimization/BayesianOptimization"
+    url = {\url{https://github.com/bayesian-optimization/BayesianOptimization}}
 }
