--- a/PR1/appendix.tex
+++ b/PR1/appendix.tex
@@ -12,11 +12,11 @@
 \setlrmarginsandblock{0.5cm}{0.5cm}{*}
 \setulmarginsandblock{0.25cm}{0.25cm}{*}
 \checkandfixthelayout
-{
+\begin{minipage}{\textwidth}
 \centering\includegraphics[width=0.45\textwidth]{./img/plot/accel/Accel_X-axis.png}
 \centering\includegraphics[width=0.45\textwidth]{./img/plot/accel/Accel_Y-axis.png}
 \centering\includegraphics[width=0.45\textwidth]{./img/plot/accel/Accel_Z-axis.png}
 \centering\includegraphics[width=0.45\textwidth]{./img/plot/gyro/Gyro_X-axis.png}
 \centering\includegraphics[width=0.45\textwidth]{./img/plot/gyro/Gyro_Y-axis.png}
 \centering\includegraphics[width=0.45\textwidth]{./img/plot/gyro/Gyro_Z-axis.png}
-}
+\end{minipage}
