--- a/PR1/content.tex
+++ b/PR1/content.tex
@@ -52,14 +52,15 @@ Project deliverables and expected outcomes include:
 
 \subsubsection{Design/Research Questions}
 \begin{questions}
-  \item How accurate is the measured apogee to that provided by the Blue Raven (RMS error)
-  \item How accurate are the calculated state values to that provided by the Blue Raven (RMS error)
-  \item Do the selected hardware components remain functional under conditions expected during flight?
-  \item What statistical analysis techniques will be employed to assess real time validity of data? \begin{questions}
+  \item How accurate is the measured apogee to that provided by the Blue Raven (RMS error) \question{}
+  \item How accurate are the calculated state values to that provided by the Blue Raven (RMS error) \question{}
+  \item Do the selected hardware components remain functional under conditions expected during flight? \question{}
+  \item What statistical analysis techniques will be employed to assess real time validity of data? \question{} \begin{questions}
     \item What communication protocols will be used to inform the redundant systems of detected errata?
     \item What metric(s) will the redundant systems use to elect which of primary and secondary sensors to sample?
   \end{questions}
 \end{questions}
+
 
 \subsubsection{Project Scope}
 The Data analytics team is subset of the Avionics sub system and will operate within the project scope that encompasses the following activities: 
